--- a/resources/style.css
+++ b/resources/style.css
@@ -1,38 +1,41 @@
 * {
-  font-family: Helvetica;
-  font-size: 14px;
+	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-weight: 300;
+	font-size: 16px;
 }
 
 h1 {
-  font-size: 18px;
-  margin: 3px 0px;
+	font-size: 24px;
+	margin: 3px 0px;
+	font-weight: bold;
 }
 
 h2 {
-  font-size: 16px;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  padding-top: 10px;
+	font-size: 20px;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	padding-top: 10px;
+	font-weight: bold;
 }
 
 p {
-  margin-top: 0;
-  padding-top: 0;
+	margin-top: 0;
+	padding-top: 0;
 }
 
 a:link, a:active, a:visited {
-  color: #007071;
+	color: #234265;
 }
 
 div.pre {
-  font-family:courier new, courier, monospace;
-  font-size: 12px;
-  padding:0px;
-  margin:0px;
+	font-family:courier new, courier, monospace;
+	font-size: 12px;
+	padding:0px;
+	margin:0px;
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 .highlight { background-color: yellow }
